# ramfox

./: Cargo.toml  README.md  pkgbuild  ramfox.service
scripts/: install.sh  ramfox.service
src/: config.rs  main.rs  profile.rs  scheduler.rs
